# cghs

./: README.md  Setup.hs  cghs.cabal  stack.yaml
app/: Main.hs
src/: CGHS.hs  CghsUtils.hs  Parse.hs  Rule.hs  Utils.hs
src/CGHS/: Clean.hs  Compact.hs  Containers.hs  Parse.hs  Rule.hs  Utils.hs
src/bnfc/: CG.cf
test/: Spec.hs
