name:                cghs
version:             0.1.0.0
synopsis:            
description:         Please see README.md
homepage:            https://github.com/inariksit/cghs#readme
license:             CC0
license-file:        LICENSE
author:              Inari Listenmaa
maintainer:          inari.listenmaa@gmail.com
category:            Natural Language Processing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rule, Parse
  other-modules:       CG.ErrM, CG.Abs, CG.Lex, CG.Par, CG.Print     
  build-depends:       array,
                       base,
                       BNFC >= 2.8.1,
                       regex-pcre >= 0.94.4,
                       mtl >= 2.2.1
  default-language:    Haskell2010

executable cghs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cghs
  default-language:    Haskell2010

test-suite cghs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cghs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/inariksit/cghs
