name:                cghs
version:             0.1.0.0
synopsis:            
description:         Please see README.md
homepage:            https://github.com/inariksit/cghs#readme
license:             OtherLicense
license-file:        LICENSE
author:              Inari Listenmaa
maintainer:          inari.listenmaa@gmail.com
category:            Natural Language Processing
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rule, Parse, Utils
  other-modules:       CG.Abs, CG.Lex, CG.Par, CG.Print, CG.ErrM
  build-depends:       array
                     , base
                     , BNFC >= 2.8.1
                     , mtl >= 2.2.1
                     , regex-pcre >= 0.94.4
  default-language:    Haskell2010

executable read-cg
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cghs
  default-language:    Haskell2010

test-suite cghs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cghs
                     , HUnit
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/inariksit/cghs
